--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
   align-items: center;
   flex-direction: column;
   overflow-x: hidden;
-  width: 100vw;
 }
 
 a {
@@ -33,7 +32,7 @@ header {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   height: 8vh;
   background: linear-gradient(to right, #475e29 10%, #555244);
   z-index: 999;
@@ -45,6 +44,7 @@ main {
   align-items: center;
   flex-direction: column;
   background-color: #F0F0F1;
+  width: 100vw;
 }
 
 .social-icons {
@@ -109,6 +109,7 @@ main {
   background-image: url("/img/clean.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: top;
   overflow: hidden;
 }
 
@@ -195,6 +196,7 @@ section img {
   justify-content: end;
   margin-right: 6rem;
   width: 100%;
+  align-items: center;
 }
 
 .container-links ul {
@@ -221,6 +223,7 @@ section img {
 .container-cards {
   display: flex;
   gap: 40px;
+  
 }
 
 .card {
@@ -243,7 +246,7 @@ section img {
 }
 
 .card-img img {
-  width: 350px;
+  width: 22rem;
   height: 250px;
   border-radius: 0px 0px 170px 0px;
   border: 1px solid #fff;
@@ -326,6 +329,7 @@ section img {
 
 #servicos{
   height: 140vh;
+  max-width: 100%;
 }
 
 #quemsomos{
@@ -368,7 +372,7 @@ section img {
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  width: 80%;
+  width: 100vw;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -400,7 +404,6 @@ section img {
   display: flex;
   flex-direction: column;
   width: 60%;
-  
 }
 
 .container-descricao h1{
@@ -409,8 +412,16 @@ section img {
 
 .box-2{
   display: flex;
-  width: 40%;
-  height: 750px;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 50rem;
+  padding: 20px;
+}
+
+.img-quemsomos{
+  width: 100%;
+  height: 100%
 }
 
 hr{
@@ -484,9 +495,109 @@ hr{
   margin-top: 0.4rem;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
+/* HEADER */
+  .social-icons{
+    justify-content: center;
+  }
+
+  .bloco-logo{
+    width: 100vw;
+    justify-content: space-between;
+  }
+  .container-links{
+    display: none;
+  }
+
+/* MAIN */
+
+  .container-home{
+    display: flex;
+    justify-content: end;
+    height: 50vh;
+  }
+
+  .section-home-background{
+    width: 90vw;
+    margin: 0;
+    height: 120px;
+    margin-left: 20px;
+    border-radius: 10px;
+    backdrop-filter: blur(20px);
+  }
+  
+  .span-1, .span-2{
+    font-size: 18px;
+  }
+
+  .btn-contato{
+    display: none;
+  }
+
+  .card{
+    margin-top: 30px;
+  }
+
   .container-cards{
     display: flex;
     flex-direction: column;
+    gap: 0;
+  }
+
+  .blocos,
+  .blocoDois {
+    width: 33%;
+    font-size: 7px;
+  }
+
+  .section-cabecalho{
+    padding-top: 50px;
+  }
+
+  #servicos{
+    height: 430vh;
+  }
+
+  #section-banner{
+    display: none;
+  }
+
+  .container-desc-img{
+    flex-direction: column;
+  }
+
+  .desc-mobile{
+    width: 100%;
+  }
+
+  #quemsomos{
+    height: 240vh;
+  }
+
+  .box-1{
+    height: 225vh;
+    width: 100%;
+  }
+
+  .box-2{
+    display: none;
+  }
+
+  .container-footer{
+    flex-direction: column;
+    height: auto;
+    gap: 0;
+  }
+
+  .container-logo-footer,
+  .container-copyright-footer,
+  .container-contato-footer{
+    width: 100%;
+  }
+
+  .msg-importante{
+    display: flex;
+    justify-content: start;
+    width: 100%;
   }
 }
