--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ header {
   width: 100%;
   height: 8vh;
   background: linear-gradient(to right, #475e29 10%, #555244);
-  z-index: 998;
+  z-index: 999;
 }
 
 main {
@@ -177,7 +177,7 @@ section img {
 
 .bloco-logo {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   background-color: rgb(255, 255, 255);
   width: 70vw;
   box-shadow: 3px 3px 10px;
@@ -495,12 +495,6 @@ hr{
   margin-top: 0.4rem;
 }
 
-
-
-
-
-
-
 @media screen and (max-width: 800px) {
 /* HEADER */
   .social-icons{
@@ -521,7 +515,6 @@ hr{
     display: flex;
     justify-content: end;
     height: 50vh;
-    
   }
 
   .section-home-background{
@@ -531,7 +524,6 @@ hr{
     margin-left: 20px;
     border-radius: 10px;
     backdrop-filter: blur(20px);
-    text-align: center;
   }
   
   .span-1, .span-2{
@@ -563,26 +555,23 @@ hr{
   }
 
   #servicos{
-    height: 330vh;
+    height: 430vh;
   }
 
   #section-banner{
     display: none;
-    height: 0;
   }
 
   .container-desc-img{
     flex-direction: column;
-    height: 750px;
   }
-
 
   .desc-mobile{
     width: 100%;
   }
 
   #quemsomos{
-    height: 100vh;
+    height: 240vh;
   }
 
   .box-1{
@@ -595,9 +584,7 @@ hr{
   }
 
   .container-footer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
     height: auto;
     gap: 0;
   }
@@ -609,6 +596,8 @@ hr{
   }
 
   .msg-importante{
+    display: flex;
+    justify-content: start;
     width: 100%;
   }
 }
