--- a/css/style.css
+++ b/css/style.css
@@ -178,10 +178,10 @@ section img {
 .bloco-logo {
   display: flex;
   justify-content: center;
+  align-items: center;
   background-color: rgb(255, 255, 255);
   width: 70vw;
   box-shadow: 3px 3px 10px;
-
 }
 
 .logo {
@@ -189,6 +189,10 @@ section img {
   margin-left: 50px;
   width: 8rem;
   height: 4rem;
+}
+
+.bloco-logo i{
+  display: none;
 }
 
 .container-links {
@@ -489,6 +493,9 @@ hr{
   margin-top: 0.4rem;
 }
 
+.mobile-links{
+  display: none;
+}
 
 
 
@@ -518,6 +525,44 @@ hr{
   }
   .container-links{
     display: none;
+  }
+
+  .bloco-logo i{
+    display: flex;
+    margin-right: 20px;
+    font-size: 30px;
+    cursor: pointer;
+    color: #555244;
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 0%;
+    height: 100%;
+    z-index: 9999; /* Garante que a div esteja acima de todos os outros elementos */
+    transition: all 500ms;
+    background: linear-gradient(to right, rgba(71, 94, 41, 0.9) 10%, rgba(85, 82, 68, 0.8));
+  }
+
+  .mobile-links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    flex-direction: column;
+    width: 100vw;
+    height: 70vh;
+    gap: 30px;
+    color:antiquewhite;
+    font-size: 40px;
+  }
+
+  .close{
+    margin: 65px 30px;
+    font-size: 30px;
+    color:antiquewhite;
   }
 
 /* MAIN */
@@ -574,19 +619,24 @@ hr{
   }
 
   .container-desc-img{
-    height: 100%;
+    height: 75%;
     flex-direction: column;
   }
 
   .container-descricao{
     display: flex;
+    text-align: center;
     flex-direction: column;
     width: 90%;
   }
 
+  .container-descricao h1{
+    display: flex;
+    justify-content: center;
+  }
+
   #quemsomos{
     height: 170vh;
-    
   }
 
   .box-1{
@@ -608,11 +658,13 @@ hr{
   .container-copyright-footer,
   .container-contato-footer{
     width: 100%;
+    padding: 15px;
   }
 
   .msg-importante{
-    display: flex;
-    justify-content: start;
     width: 100%;
+  }
+  .msg-importante p{
+    margin-left: 30px;
   }
 }
