--- a/css/style.css
+++ b/css/style.css
@@ -467,6 +467,7 @@ hr{
 }
 
 .logo-footer{
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
   letter-spacing: 3px;
   font-weight: 900;
   color: #fff;
