--- a/css/style.css
+++ b/css/style.css
@@ -552,6 +552,7 @@ hr{
     right: 0;
     width: 0%;
     height: 100%;
+    padding: 0 auto;
     z-index: 9999; /* Garante que a div esteja acima de todos os outros elementos */
     transition: all 500ms;
     background: linear-gradient(to bottom, rgba(71, 94, 41, 1) 10%, rgba(85, 82, 68, 1));
@@ -585,6 +586,12 @@ hr{
     transition: 500ms ease-in-out;
   }
 
+  .menu{
+    border: 5px solid ;
+    border-radius: 10px;
+    padding: 5px;
+  }
+
   .mobile-links{
     display: flex;
     justify-content: start;
@@ -595,6 +602,7 @@ hr{
     gap: 30px;
     color:antiquewhite;
     font-size: 25px;
+    padding-left: 15px;
     padding-left: 15px;
     font-weight: 600;
   }
