--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,11 @@ main {
   width: 100vw;
 }
 
+section{
+  height: auto;
+  margin-bottom: 10vh;
+}
+
 .social-icons {
   display: flex;
   justify-content: end;
@@ -111,11 +116,11 @@ main {
   background-size: cover;
   background-position: top;
   overflow: hidden;
+  margin: 0;
 }
 
 .section-home-background{
-  height: 28vh;
-  width: 50rem;
+  width: auto;
   margin-left: 100px;
   margin-bottom: 20px;
 }
@@ -224,6 +229,12 @@ section img {
   opacity: 0.7;
 }
 
+
+
+
+
+
+
 .container-cards {
   display: flex;
   gap: 40px;
@@ -331,16 +342,9 @@ section img {
   gap: 15px;
 }
 
-#servicos{
-  height: 140vh;
-  max-width: 100%;
-}
-
-#quemsomos{
-  height: 100vh;
-}
 
 .section-cabecalho{
+  width: 100%;
   gap: 50px;
   display: flex;
   justify-content: center;
@@ -356,11 +360,6 @@ section img {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50vh;
-}
-
-#quemsomos{
-  height: 110vh;
 }
 
 .section-quemsomos{
@@ -368,7 +367,7 @@ section img {
   justify-content: center;
   align-items: center;
   width: 90%;
-  height: 100vh;
+  padding-top: 15vh;
 }
 
 .container-desc-img{
@@ -437,6 +436,69 @@ hr{
 
 .blocos{
   visibility: hidden;
+}
+
+
+.section-container-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #475e29;
+  width: 100%;
+  height: 100vh;
+  margin-bottom: 2px;
+}
+
+.container-form{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 23rem;
+  height: 50%;
+  background: #F9F9F9;
+  gap: 20px;
+  margin: 50px;
+  padding: 20px;
+  
+}
+
+.container-form input{
+  padding: 15px;
+  width: 90%;
+  height: 2rem;
+  outline: none;
+}
+
+.container-form select{
+  width: 90%;
+  height: 2rem;
+}
+
+.container-form button{
+  width: 90%;
+  height: 2rem;
+  background:#555244;
+  color: #fff;
+  font-weight: 600;
+  transition: all 500ms;
+  border: none;
+}
+
+.container-form button:hover{
+  cursor: pointer;
+  background: #0b6e24;
+  transition: all 300ms;
+}
+
+.container-form textarea{
+  width: 90%;
+  height: 4rem;
+  resize: none;
+  outline: none;
+}
+
+.container-form input:focus{
+  border: 2px solid #475e29;
 }
 
 .container-footer{
@@ -518,6 +580,12 @@ hr{
 
 
 @media screen and (max-width: 800px) {
+
+section{
+    height: auto;
+    margin-bottom: 10vh;
+  }
+
 /* HEADER */
 
   .container-icons{
@@ -575,7 +643,6 @@ hr{
     padding: 30px;
     border-bottom: 2px solid #777777;
     font-size: 25px;
-    
   }
 
   .social-icons-menu-mobile a{
@@ -628,7 +695,7 @@ hr{
     align-items: center;
     width: 90vw;
     margin: 0;
-    height: 150px;
+
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
     border: 1px solid rgb(131, 131, 131);
     margin-left: 20px;
@@ -672,11 +739,10 @@ hr{
   }
 
   .section-cabecalho{
+    display: flex;
+    justify-content: center;
     padding-top: 100px;
-  }
-
-  #servicos{
-    height: 460vh;
+    width: 100%;
   }
 
   #section-banner{
@@ -684,7 +750,9 @@ hr{
   }
 
   .container-desc-img{
-    height: 95%;
+    height: auto;
+    padding: 20px;
+    margin-bottom: 10vh;
     flex-direction: column;
   }
 
@@ -700,12 +768,27 @@ hr{
     justify-content: center;
   }
 
+  #trabalheconosco{
+    height: auto;
+    margin-bottom: 10vh;
+  }
+  #servicos{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: auto;
+    margin-bottom: 10vh;
+  }
   #quemsomos{
-    height: 150vh;
+    height: auto;
+    margin-bottom: 10vh;
+  }
+  .section-quemsomos{
+    padding-top: 100px;
   }
 
   .box-1{
-    height: 225vh;
+    height: auto;
     width: 100%;
   }
 
@@ -716,7 +799,7 @@ hr{
   .container-footer{
     flex-direction: column;
     height: auto;
-    margin-top: 100px;
+
   }
 
   .container-logo-footer,
@@ -731,5 +814,76 @@ hr{
   }
   .msg-importante p{
     margin-left: 30px;
+  }
+
+  .section-container-form{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background: #475e29;
+    width: 100%;
+    height: auto;
+    padding-bottom: 50px;
+  }
+  
+  .container-form{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 23rem;
+    height: auto;
+    background: #F9F9F9;
+    gap: 20px;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 10px;
+  }
+  
+  .container-form input{
+    padding: 15px;
+    width: 100%;
+    height: 3rem;
+    outline: none;
+    border: 1px solid black;
+    border-radius: 10px;
+  }
+  
+  .container-form select{
+    width: 100%;
+    height: 3rem;
+    border: 1px solid black;
+    background-color: #fff;
+    border-radius: 10px;
+    padding-left: 10px;
+  }
+  
+  .container-form button{
+    border-radius: 10px;
+    width: 100%;
+    height: 3rem;
+    background:#555244;
+    color: #fff;
+    font-weight: 600;
+    transition: all 500ms;
+    border: none;
+    letter-spacing: 1px;
+    font-size: 18;
+  }
+  
+  .container-form button:hover{
+    cursor: pointer;
+    background: #0b6e24;
+    transition: all 300ms;
+  }
+  
+  .container-form textarea{
+    width: 100%;
+    height: 4rem;
+    resize: none;
+    outline: none;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
   }
 }
