--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ section{
 
 .section-home-background{
   width: auto;
+  height: 200px;
   margin-left: 100px;
   margin-bottom: 20px;
 }
@@ -140,7 +141,7 @@ section{
 .span-2{
   color:antiquewhite;
   font-weight: 600;
-  font-size: 2.7em;
+  font-size: 1.7em;
   letter-spacing: 1px;
 
 }
@@ -437,7 +438,6 @@ hr{
 
 .section-container-form{
   display: flex;
-  flex-direction: column;
   align-items: center;
   background: #475e29;
   width: 100%;
@@ -450,46 +450,21 @@ hr{
   align-items: center;
   flex-direction: column;
   width: 23rem;
-  height: 50%;
   background: #F9F9F9;
   gap: 20px;
-  margin: 50px;
   padding: 20px;
 }
 
-.container-form input{
+input{
   padding: 15px;
   width: 90%;
   height: 2rem;
   outline: none;
 }
 
-.container-form select{
+select{
   width: 90%;
   height: 2rem;
-}
-
-.container-form button{
-  width: 90%;
-  height: 2rem;
-  background:#555244;
-  color: #fff;
-  font-weight: 600;
-  transition: all 500ms;
-  border: none;
-}
-
-.container-form button:hover{
-  cursor: pointer;
-  background: #0b6e24;
-  transition: all 300ms;
-}
-
-.container-form textarea{
-  width: 90%;
-  height: 4rem;
-  resize: none;
-  outline: none;
 }
 
 .container-form input:focus{
@@ -502,7 +477,7 @@ hr{
   gap: 20px;
   align-items: center;
   width: 100vw;
-  height: 15vh;
+  height: auto;
   background-color: #555244;
 }
 
@@ -581,13 +556,12 @@ hr{
 
 .section-container-form{
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   background: #475e29;
   width: 100%;
   height: auto;
-  padding-bottom: 70px;
+  padding: 120px 0px 150px 0px;
 }
 
 .container-form{
@@ -603,7 +577,7 @@ hr{
   border-radius: 10px;
 }
 
-.container-form input{
+input{
   padding: 15px;
   width: 100%;
   height: 3rem;
@@ -612,7 +586,7 @@ hr{
   border-radius: 10px;
 }
 
-.container-form select{
+select{
   width: 100%;
   height: 3rem;
   border: 1px solid black;
@@ -621,7 +595,8 @@ hr{
   padding-left: 10px;
 }
 
-.container-form button{
+
+.btnEnviar{
   border-radius: 10px;
   width: 100%;
   height: 3rem;
@@ -634,13 +609,13 @@ hr{
   font-size: 18;
 }
 
-.container-form button:hover{
+.btnEnviar:hover{
   cursor: pointer;
   background: #0b6e24;
   transition: all 300ms;
 }
 
-.container-form textarea{
+.textarea{
   width: 100%;
   height: 4rem;
   resize: none;
@@ -650,6 +625,35 @@ hr{
   padding: 10px;
 }
 
+#trabalheconosco{
+  display: flex;
+}
+
+.box1-trabalheconosco{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 70vh;
+  line-height: 1;
+  margin: 50px;
+}
+
+.box2-trabalheconosco{
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
+  width: 50%;
+  height: 70vh;
+  margin: 50px;
+}
+
+.arrow{
+  display: none;
+}
 
 
 
@@ -664,15 +668,50 @@ hr{
 
 
 
-@media screen and (max-width: 1150px) {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1200px) {
 
 section{
     height: auto;
     margin-bottom: 10vh;
   }
+  header{
+    background: transparent;
+  }
 
 /* HEADER */
 
+#home{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
   .container-icons{
     display: none;
   }
@@ -683,7 +722,10 @@ section{
   .logo{
     margin: 0px 0px 0px 20px;
   }
+
   .bloco-logo{
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.7);
+    background: #fff;
     width: 100vw;
     justify-content: space-between;
   }
@@ -739,7 +781,7 @@ section{
   }
 
   .menu{
-    border: 3px solid ;
+
     border-radius: 10px;
     padding: 5px;
   }
@@ -771,15 +813,16 @@ section{
   .container-home{
     display: flex;
     justify-content: end;
-    height: 50vh;
+    height: 90vh;
   }
 
   .section-home-background{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90vw;
-    margin: 0;
+    padding: 20px;
+    width: 300px;
+    height: 200px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
     border: 1px solid rgb(131, 131, 131);
     margin-left: 20px;
@@ -806,6 +849,25 @@ section{
     width: 100%;
   }
 
+  .arrow{
+    display: flex;
+    justify-content: center;
+    color: antiquewhite;
+    width: 100%;
+    font-size: 50px;
+    margin-top: 100px;
+    padding-bottom: 20px;
+    animation: arrowAnimation 1s infinite alternate; /* Added 'infinite' for continuous animation and 'alternate' for reversing */
+}
+
+@keyframes arrowAnimation{
+    0%{
+      transform: translateY(0px);
+    }
+    100%{
+      transform: translateY(20px); 
+    }
+}
   .card{
     margin-top: 30px;
   }
@@ -816,10 +878,8 @@ section{
     gap: 0;
   }
 
-  .blocos,
-  .blocoDois {
-    width: 33%;
-    font-size: 7px;
+  .container-blocos {
+    display: none;
   }
 
   .section-cabecalho{
@@ -853,8 +913,12 @@ section{
   }
 
   #trabalheconosco{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     height: auto;
-    margin-bottom: 10vh;
+    padding-top: 130px;
   }
   #servicos{
     display: flex;
@@ -903,17 +967,29 @@ section{
     margin-left: 30px;
   }
 
+  .box1-trabalheconosco{
+    display: none;
+  }
+
+  .box2-trabalheconosco{
+    width: auto;
+    padding: 0;
+    margin: 0;
+  }
+
   .section-container-form{
+
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     background: #475e29;
     width: 100%;
-    height: auto;
+    height: 100%;
+    padding: 0;
     padding-bottom: 70px;
   }
-  
+
   .container-form{
     display: flex;
     align-items: center;
@@ -945,18 +1021,6 @@ section{
     padding-left: 10px;
   }
   
-  .container-form button{
-    border-radius: 10px;
-    width: 100%;
-    height: 3rem;
-    background:#555244;
-    color: #fff;
-    font-weight: 600;
-    transition: all 500ms;
-    border: none;
-    letter-spacing: 1px;
-    font-size: 18;
-  }
   
   .container-form button:hover{
     cursor: pointer;
@@ -964,7 +1028,7 @@ section{
     transition: all 300ms;
   }
   
-  .container-form textarea{
+  .textarea{
     width: 100%;
     height: 4rem;
     resize: none;
