--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,7 @@ section img {
   align-items: center;
   background-color: rgb(255, 255, 255);
   width: 70vw;
+  height: auto;
   box-shadow: 3px 3px 10px;
 }
 
@@ -204,7 +205,6 @@ section img {
 .container-links {
   display: flex;
   justify-content: space-around;
-  
   width: 100%;
   align-items: center;
 }
