--- a/css/style.css
+++ b/css/style.css
@@ -445,15 +445,6 @@ hr{
   margin-bottom: 2px;
 }
 
-.form{
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 23rem;
-  background: #F9F9F9;
-  gap: 20px;
-  padding: 20px;
-}
 
 input{
   padding: 15px;
@@ -542,17 +533,7 @@ select{
   display: none;
 }
 
-.container-form{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 23rem;
-    height: 50%;
-    background: #F9F9F9;
-    gap: 20px;
-    margin: 50px;
-    padding: 20px;
-}
+
 
 .section-container-form{
   display: flex;
@@ -564,7 +545,7 @@ select{
   padding: 80px 0px 150px 0px;
 }
 
-.container-form{
+.form{
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -572,10 +553,10 @@ select{
   height: auto;
   background: #F9F9F9;
   gap: 20px;
-  margin: 20px;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 15px;
 }
+
 
 input{
   padding: 15px;
@@ -643,12 +624,11 @@ select{
 
 .box2-trabalheconosco{
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: start;
   flex-direction: column;
   width: 50%;
-  height: 70vh;
-  margin: 50px;
+  height: auto;
 }
 
 .arrow{
@@ -918,8 +898,13 @@ section{
     align-items: center;
     width: 100%;
     height: auto;
-    padding-top: 130px;
+    margin-bottom: 10vh;
   }
+
+  .form{
+    margin: 100px 0px 190px 0px;
+  }
+
   #servicos{
     display: flex;
     flex-direction: column;
@@ -927,6 +912,7 @@ section{
     height: auto;
     margin-bottom: 10vh;
   }
+
   #quemsomos{
     height: auto;
     margin-bottom: 10vh;
@@ -972,37 +958,22 @@ section{
   }
 
   .box2-trabalheconosco{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: auto;
-    padding: 0;
-    margin: 0;
   }
 
   .section-container-form{
-
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     background: #475e29;
     width: 100%;
-    height: 100%;
     padding: 0;
-    padding-bottom: 70px;
   }
 
-  .container-form{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 23rem;
-    height: auto;
-    background: #F9F9F9;
-    gap: 20px;
-    margin: 20px;
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
   .container-form input{
     padding: 15px;
     width: 100%;
