--- a/css/style.css
+++ b/css/style.css
@@ -626,6 +626,12 @@ select{
   margin: 50px;
 }
 
+.box1-span1{
+  font-size: 70px; 
+  color: #fff; 
+  font-weight: 600;
+}
+
 .box2-trabalheconosco{
   display: flex;
   justify-content: center;
@@ -635,6 +641,9 @@ select{
   height: auto;
 }
 
+.box1-span2{
+  color: #fff; padding: 20px 0px 40px 0px;
+}
 .arrow{
   display: none;
 }
@@ -899,14 +908,11 @@ section{
   #trabalheconosco{
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     width: 100%;
     height: auto;
     margin-bottom: 10vh;
-  }
-
-  .form{
-    margin: 100px 0px 190px 0px;
   }
 
   #servicos{
@@ -958,6 +964,23 @@ section{
   }
 
   .box1-trabalheconosco{
+    display: flex;
+    height: auto;
+    padding-top: 50px;
+  }
+
+  .box1-span1{
+    font-size: 40px;
+    letter-spacing: 2px;
+  }
+
+  .box1-span2{
+    display: flex;
+    margin: 0;
+    padding: 10px 0px 0px 0px;
+  }
+
+  .none{
     display: none;
   }
 
@@ -966,6 +989,8 @@ section{
     justify-content: center;
     align-items: center;
     width: auto;
+    height: auto;
+    padding-bottom: 60px;
   }
 
   .section-container-form{
