--- a/css/style.css
+++ b/css/style.css
@@ -711,7 +711,7 @@ section{
 #home{
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: center;
 }
   .container-icons{
     display: none;
