--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ section{
 
 #home {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
@@ -711,7 +711,7 @@ section{
 #home{
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: end;
 }
   .container-icons{
     display: none;
