--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,7 @@ section img {
   justify-content: center;
   align-items: center;
   width: 90%;
-  padding-top: 15vh;
+  padding-top: 25vh;
 }
 
 .container-desc-img{
@@ -552,7 +552,7 @@ select{
   background: #475e29;
   width: 100%;
   height: auto;
-  padding: 80px 0px 150px 0px;
+  padding: 100px 0px 150px 0px;
 }
 
 .form{
@@ -591,19 +591,20 @@ select{
   border-radius: 10px;
   width: 100%;
   height: 3rem;
-  background:#555244;
+  background:#0b6e24;
   color: #fff;
   font-weight: 600;
   transition: all 500ms;
   border: none;
   letter-spacing: 1px;
   font-size: 18;
+  opacity: 0.9;
 }
 
 .btnEnviar:hover{
   cursor: pointer;
-  background: #0b6e24;
   transition: all 300ms;
+  opacity: 1;
 }
 
 .textarea{
